# price_tracker

./: README.md
backend/: .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  init_db.py  price_tracker.db  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py  run.py
backend/app/core/: celery_app.py  celery_beat_schedule.py
backend/app/crud/: __init__.py  search.py  search_dashboard.py  users.py
backend/app/models/: __init__.py  product.py
backend/app/parsers/: __init__.py  amazon_parser.py  price_tracker.py
backend/app/routers/: auth.py  dashboard.py  products.py
backend/app/schemas/: __init__.py  auth.py  product.py  user.py
backend/app/services/: __init__.py  auth_service.py  save_to_db.py
backend/app/tasks/: update_prices.py
backend/tests/test_services/: test_amazon_parser.py  test_auth.py  test_crud_dashboard.py  test_crud_search.py  test_crud_users.py  test_save_to_db.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: StoreProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: Header.tsx  Main.tsx
frontend/src/components/ui/: ItemLink.tsx  Search.tsx  SearchBar.tsx
frontend/src/lib/: api.ts  axios.ts  hooks.ts  searchSlice.ts  store.ts
