[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nyvrae <mex99anue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"


[tool.poetry.group.dev.dependencies]
playwright = "^1.54.0"
beautifulsoup4 = "^4.13.4"
asyncio = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
