[tool.poetry]
name = "backend"
version = "0.2.0"
description = ""
authors = ["nyvrae <mex99anue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.43"
playwright = "^1.54.0"
uvicorn = "^0.32.1"
pydantic = {extras = ["email"], version = "^2.11.7"}
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.13.4"
asyncio = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
